// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`generateTOC organizes TOC based on sidebar configuration 1`] = `
"### Test Section

- [Getting started](/test/getting-started.md): Instructions on how to get started with the tool

### Quickstart Section

- [Quickstart](/test/quickstart.md): Instructions for quick project initialization

### Other

- [Some other section](/test/other.md)
"
`;

exports[`generateTOC handles object-based sidebar configuration correctly 1`] = `
"### Getting Started

- [Getting started](/test/getting-started.md): Instructions on how to get started with the tool

### API Reference

- [Quickstart](/test/quickstart.md): Instructions for quick project initialization

### Other

- [Some other section](/test/other.md)
"
`;

exports[`generateTOC appends the specified \`linksExtension\` to the generated links 1`] = `
"- [Getting started](/test/getting-started.html): Instructions on how to get started with the tool
- [Quickstart](/test/quickstart.html): Instructions for quick project initialization
- [Some other section](/test/other.html)
"
`;
